@@ -730,7 +730,7 @@
       </tr>
       <tr>
         <td align="right">$year.rain.sum_le((0.1, 'inch', 'group_rain'))</td>
-        <td align="left">122.000000</td>
+        <td align="left">122</td>
       </tr>
   </table>
 
