@@ -3,6 +3,9 @@ weewx change history
 
 4.0.1 MM/DD/YYYY
 
+Allow xtype extensions to return something other than a ValueTuple. Fixes
+issue #554.
+
 Added option 'reuse_ssl' to FTP. This activates a workaround for a bug in the
 Python ftp library that causes long-lived connections to get closed prematurely.
 Works only with Python 3.6 and greater.
